# dqscore

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/dqscore/: __init__.py  autoscan.py  checks.py  cli.py  profiling.py  report.py  validator.py
tests/: test_checks.py  test_suite.py
